--- a/.gitconfig
+++ b/.gitconfig
@@ -1,33 +1,88 @@
 [user]
-	name = Elethom Hunter
-	email = elethomhunter@gmail.com
+    name = Elethom Hunter
+    email = elethomhunter@gmail.com
+    signingkey = 6FF4269F86D04A4D
 [credential]
-	helper = osxkeychain
+    helper = osxkeychain
 [alias]
-	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
-	co = checkout
-	br = branch
-	ca = commit -a
-	s = status
-	mg = merge
-	tg = tag
-	st = stash
-	ps = push
-	pl = pull
-	cl = clone
-	sm = submodule
-	caa = commit -a --amend
-	a = add
-	r = rm
-	l = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
-	al = alias
-	gi = "!gi() { curl -L -s https://www.gitignore.io/api/$@ ;}; gi"
+    a = add
+    ap = add -p
+    aca = !git add . && git commit -a
+    b = branch
+    ba = branch -a
+    brd = branch -rd
+    bd = branch -d
+    bdf = branch -D
+    c = commit
+    ca = commit -a
+    caa = commit -a --amend
+    cl = clone
+    co = checkout
+    cob = checkout -b
+    cp = cherry-pick
+    d = diff
+    dh = diff HEAD
+    dh1 = diff HEAD~1
+    f = fetch
+    fa = fetch --all
+    fap = fetch --all -p
+    fo = fetch origin
+    fb = filter-branch
+    fbd = "filter-branch -f --env-filter 'GIT_COMMITTER_DATE=$GIT_AUTHOR_DATE; export GIT_COMMITTER_DATE'"
+    fbs = "filter-branch -f --commit-filter 'git commit-tree -S \"$@\";' -- --all"
+    l = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
+    m = mv
+    mg = merge
+    ps = push
+    psdt = push --delete
+    pst = push --tags
+    psf = push -f
+    psft = push -f --tags
+    pl = pull
+    r = rm -r --cached
+    rf = rm -rf
+    rao = remote add origin
+    rau = remote add upstream
+    ruo = remote set-url origin
+    ruu = remote set-url upstream
+    rb = rebase
+    rba = rebase --abort
+    rbi = rebase -i
+    rbc = rebase --continue
+    rs = reset
+    rshh = reset --hard HEAD
+    rs1 = reset --soft HEAD~1
+    rsh1 = reset --hard HEAD~1
+    s = status
+    sm = submodule
+    st = stash
+    std = stash drop
+    stl = stash list
+    stp = stash pop
+    t = tag
+    td = tag -d
+    gi = "!gi() { curl -L -s https://www.gitignore.io/api/\"$@\" ;}; gi"
 [diff "localizablestrings"]
     textconv = "iconv -f utf-16 -t utf-8"
 [filter "media"]
-	clean = git-media-clean %f
-	smudge = git-media-smudge %f
+    clean = git-media-clean %f
+    smudge = git-media-smudge %f
 [diff]
-	tool = vimdiff
+    tool = vimdiff
 [push]
-	default = current
+    default = current
+[core]
+    excludesfile = ~/.gitignore
+[filter "lfs"]
+    required = true
+    clean = git-lfs clean -- %f
+    smudge = git-lfs smudge -- %f
+    process = git-lfs filter-process
+[commit]
+    gpgsign = true
+[tag]
+    gpgsign = true
+[rebase]
+	abbreviateCommands = true
+[merge]
+	ff = only
